--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -8,8 +8,8 @@
 .loadingstart {
     display: flex;
     justify-content: center;
-    align-items: center; /* Changed from align-content to align-items */
-    height: 100vh; /* Changed from 100% to 100vh to cover full viewport height */
+    align-items: center; 
+    height: 100vh; 
     width: 100%;
     margin: 0;
     padding: 0;
@@ -61,8 +61,8 @@
 	}
 	to {
 		stroke-dashoffset: 0;
+    }
 	}
-}
 @keyframes worm2 {
 	from {
 		stroke-dashoffset: 358;
@@ -74,3 +74,4 @@
 		stroke-dashoffset: -358;
 	}
 }
+
