--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -89,7 +89,7 @@ document.addEventListener('DOMContentLoaded', function() {
             executeJavaScript(jsCode);
 
 
-            alert("kod poszedł"+)
+            alert("kod poszedł")
 
         }
     });
