--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,5 @@
 body{
-    background-color: white;
+    background-color: #0f172a;
     width: 100%;
     height: 100%;
     padding: 0px;
@@ -7,6 +7,25 @@ body{
     flex-direction: column;
     margin: 0px;
 }
+
+
+.light_mode{
+    background-color: white !important;
+ 
+}
+.dark_mode{
+    background-color: #0f172a !important;
+}
+
+.light_mode_font{
+    color: white !important;
+}
+
+.dark_mode_font{
+    color: #0f172a !important;
+}
+
+
 .background {
     background-color: rgba(128, 89, 253, 1);
     background-image: linear-gradient(163deg, rgba(128, 89, 253, 1) 0%, rgba(128, 89, 253, 1) 25%, rgba(255, 195, 31, 1) 86%);
@@ -75,7 +94,7 @@ body{
 
 .slid{
     width: 100%;
-    height: 800px;
+    height: 100%;
     background-color: #0f172a;
     display: flex;
     align-items: center;
@@ -133,8 +152,8 @@ body{
 
 
 
-
-.white_divs{
+.white_divs {
+    clear: both; 
     width: 80%;
     height: 500px;
     display: flex;
@@ -143,10 +162,9 @@ body{
 }
 
 
-
 .card {
     background-color: white;
-    color: rgba(30, 41, 59, 0.75);
+    /* color: rgba(30, 41, 59, 0.75); */
     border-radius: 15px;
     padding: 20px;
     width: 35%;
@@ -162,7 +180,7 @@ body{
     margin-top: 20px;
     content: "";
     font-size: 40px;
-    color: white;
+    /* color: white;     */
     background-color:#8957ff;
     border-radius: 50%;
     width: 50px;
@@ -179,5 +197,154 @@ body{
     font-size: 1rem;
     margin: 10px 0 0 0;
 }
+.image-container {
+    display: flex;
+    flex-direction: row;
+    margin: 5% 0px 0px 0px;
+    gap: 5%;
+}
+
+.image-container img {
+    max-width: 450px;
+    border-radius: 50px;
+}
+
+@media only screen and (max-width: 770px) {
+    .image-container {
+        flex-direction: column;
+    }
+}
+
+}
+
+@media only screen and (max-width: 899px) {
+    .white_divs {
+        clear: both;
+        flex-direction: column;
+        height: auto;
+        margin-top: 100px;
+    }
+    .card {
+        width: 90%;
+        margin: 20px 0px 20px 0px;
+    }
+    
+}
+
+@media only screen and (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .image-container img {
+        width: 100%;
+    }
+    
+}
+
+.dark_side{
+    height: 50px;
+    width: 200px;
 
 
+}
+
+
+
+
+.theme-switcher {
+    position: relative;
+    width: 100px;
+    height: 50px;
+    margin: 11% 0px 0px 5%;
+    background-color: #7d5fff;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.circle {
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    cursor: pointer;
+    position: absolute;
+    transition: transform 0.5s;
+}
+
+.light-theme {
+    left: 5px;
+}
+
+.dark-theme {
+    right: 5px;
+    opacity: 0;
+}
+
+.switch {
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    transition: left 0.5s, transform 0.5s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+body.dark-mode {
+    background-color: #333;
+    color: #f0f0f0;
+}
+
+body.dark-mode .switch {
+    left: 70px;
+}
+
+body.dark-mode .light-theme {
+    opacity: 0;
+}
+
+body.dark-mode .dark-theme {
+    opacity: 1;
+}
+
+
+@media (max-width: 862px) {
+    .white_divs {
+        margin-top: 100px;
+        flex-direction: column;
+        width: 100%;
+        height: 2100%;
+
+    }
+    .card {
+        color: black;
+        width: 90%;
+
+
+
+    }
+
+}
+    
+@media (max-width:732px){
+    .text_main div{
+        display: none;
+    }
+    .theme-switcher{
+            margin-right: 40px;
+            margin-bottom: 80px;
+    } 
+}
